fix: scale blog post images and prevent overflow

--- a/src/components/BlogPost/BlogPost.scss
+++ b/src/components/BlogPost/BlogPost.scss
@@ -3,6 +3,10 @@
     margin-bottom: 10px;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   .date {
     display: block;
     margin-bottom: 10px;
